# tepilora-python

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Tepilora/: __init__.py  _default_client.py  _schema.py  _validators.py  analytics.py  analytics.pyi  arrow.py  capabilities.py  client.py  errors.py  models.py
Tepilora/endpoints/: __init__.py  _base.py  alerts.py  alternatives.py  analytics.py  asset_allocation.py  billing.py  bonds.py  clients.py  data.py  documents.py  esg.py  exports.py  factors.py  fh.py  macro.py  news.py  options.py  portfolio.py  profiling.py  publications.py  queries.py  realtime.py  search.py  securities.py  stocks.py  workflows.py
tests/: conftest.py  test_all_operations.py  test_all_operations_async.py  test_analytics_async.py  test_analytics_coverage.py  test_analytics_quant_e2e.py  test_analytics_sync.py  test_arrow_bytes_decode.py  test_capabilities.py  test_capabilities_full.py  test_client_async.py  test_client_coverage.py  test_client_sync.py  test_credits.py  test_decimal.py  test_endpoints_async.py  test_endpoints_sync.py  test_error_and_meta.py  test_exports_coverage.py  test_idempotency.py  test_module_level.py  test_rate_limit.py  test_retry.py  test_securities_grouping.py  test_upgrade_hints.py  test_validators.py
